--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "expressapp",
   "version": "1.0.0",
   "description": "This is Weather App in Express JS",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
